--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ai_resume?serverTimezone=Asia/
 spring.datasource.username=root
 spring.datasource.password=ZXC9988666ZXC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+server.port=12345
