--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=ZXC9988666ZXC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=12345
+file.upload.dir=D:\\fnfyu\\projects\\ai_resume\\uploads
