--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ai_resume
 spring.datasource.url=jdbc:mysql://localhost:3306/ai_resume?serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=ZXC9988666ZXC
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=12345
 file.upload.dir=D:\\fnfyu\\projects\\ai_resume\\uploads
