--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ api.key=sk-d5b20d7cfeec4d7eacd83133fbd7010e
 api.url=https://dashscope.aliyuncs.com/api/v1/services/aigc/text-generation/generation
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+resume.task.delay=1000
